--- a/src/app/modules/layout/components/sidebar-menu-item/sidebar-menu-item.component.html
+++ b/src/app/modules/layout/components/sidebar-menu-item/sidebar-menu-item.component.html
@@ -47,7 +47,7 @@
 </div>
 
 <!-- Submenu under expanded area -->
-<div *ngIf="item?.items && isExpanded(item)" class="menu-content">
+<div *ngIf="item?.items" [class.expanded]="showMenu" class="menu-content">
   <app-sidebar-menu-item
     *ngFor="let sub of item?.items!"
     (click)="navigate(sub)"
